Fixed text wrap on smaller devices (/me)
https://trello.com/c/bVXgrc0T/24-wrapping-on-iphone

--- a/app/public/style.css
+++ b/app/public/style.css
@@ -1139,6 +1139,10 @@ MESSAGES
 
 @media all and (max-width: 450px) {
 
+  .inspiring-me-themes .count {
+    display: block;
+  }
+
   p.strapline {
     line-height: 1;
     margin-bottom: 1em;
